style.css
*{
  font-family: 'robotomedium';
  --cyand : #29F8FE;
  --cyanl : #77FDFF;
  --pinkd : #B80692;
  --pinkl : #AB11FF;
  --blued : #090455;
  --bluel : #001BFF;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
}

.layout{
  display: flex;
}

.side{
  background-image: url(img/cover-compressed.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  width: 30%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.bgImage{
  width:100%;
  height: 100%;
}
.logoImage{
  max-width: 100px;
  max-height: 100px;
}
.logo h6{
  font-family: 'robotobold';
  font-weight: bolder;
  font-size: 1.7em;
  align-self: center;
}
.logo{
  display:flex;
}
.main{
  flex: 1;
  background-image: linear-gradient(to bottom, var(--pinkd), var(--bluel ));
  border-left: 3px solid var(--blued);
  display: flex;
  flex-direction: column;
  align-items: center;
}
.hero{
  margin: 60px 30px;
  display: flex;
  justify-content: center;
}
.hero .text{
  text-align: center;
  font-size: 1.3em;
}
input{
  border: 2px solid white;
  border-radius: 5px;
  background-color: transparent;
  padding: 5px;
  font-family: 'robotobold';
}
label{
  font-size: 0.7em;
  padding-left: 2px;
}
.frow{
  display: flex;
  flex-direction: column;
  
}
#input-form{
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap:15px;
  margin-bottom: 30px;
  column-gap: 80px;
}
button{
  margin-bottom:20px;
  background-color: transparent;
  border: 2px solid white;
  border-radius: 5px;
  padding: 10px 16px;
}
button:hover{
  cursor: pointer;
  background-color: var(--pinkd);
}
button:active{
  background-color: var(--blued);
  color: var(--pinkd);
  border: 2px solid var(--pinkl);
}
.req .text{
  margin-bottom: 30px;
  font-family: 'robotoblack_italic';
}

input:not(:placeholder-shown){
  border: 2px solid var(--cyand)
}
input:focus{
  outline-style: none;
  outline-color: var(--bluel);
  outline-style: solid ;
  border: 2px solid #1b39e2;
}
a{
  color: var(--cyand);
  text-decoration: none;
}
a:hover{
  color: var(--pinkd);
}
input:invalid:not(:placeholder-shown){
  border: 2px solid var(--pinkd)
}
.password-rules{
  display: none;
  background-color: rgba(0, 0, 0, 0.3);
  border: 2px solid var(--pinkd);
  border-radius: 5px;
}
#password:valid + .password-rules{
  border-color: var(--bluel);
}
.password-rules li{
  margin-top: 10px;
  margin-left: 20px;
  color: var(--pinkd);
}

